updated header on category page

--- a/app/category.html
+++ b/app/category.html
@@ -42,13 +42,13 @@
                 <img src="images/pitneybowes-logo.png" alt="pitney bowes logo" class="hidden-xs"/>
                 <img src="images/sprite-mobile/pitneybowes-logo2x.png" alt="pitney bowes logo" class="visible-xs logo-mobile"/>
               </a>
-              <span class="cat-title">Location Intelligence</span>
             </div>
             <nav class="col-xs-6">
               <ul>
                 <li><a href="#" class="icn-menu"></a><li>
-                <li><a href="#" class="icn-search hidden-xs"></a></li>
-                <li><a href="#" class="icn-cart"></a></li>
+                <li><a href="#" class="icn-search"></a></li>
+                <li><a href="#" class="text-link hidden-xs">Shop</a></li>
+                <li><a href="#" class="text-link hidden-xs">My Account</a></li>
               </ul>
             </nav>
           </div><!--/.row-fluid-->
