updated headers, tablet and mobile styles

--- a/app/category.html
+++ b/app/category.html
@@ -38,7 +38,7 @@
         <div class="container-fluid">
           <div class="row">
             <div class="logo col-xs-6">
-              <a href="#">
+              <a href="index.html">
                 <img src="images/pitneybowes-logo.png" alt="pitney bowes logo" class="hidden-xs"/>
                 <img src="images/sprite-mobile/pitneybowes-logo2x.png" alt="pitney bowes logo" class="visible-xs logo-mobile"/>
               </a>
@@ -47,8 +47,9 @@
             <nav class="col-xs-6">
               <ul>
                 <li><a href="#" class="icn-menu"></a><li>
-                <li><a href="#" class="icn-search hidden-xs"></a></li>
-                <li><a href="#" class="icn-cart"></a></li>
+                <li><a href="#" class="icn-search"></a></li>
+                <li><a href="#" class="text-link hidden-xs">Shop</a></li>
+                <li><a href="#" class="text-link hidden-xs">My Account</a></li>
               </ul>
             </nav>
           </div><!--/.row-fluid-->
@@ -285,7 +286,7 @@
                 </div></a><!--/.col-xs-12.col-sm-->
 
                 <a href="#"><div class="col-sm-6 bg col-xs-12 vert mobil-video-image-example">
-                  <img class="video-bg-img visible-xs" src="images/category-template/desktop/col2-bg-fullwidth4.jpg" />
+                  <img class="video-bg-img visible-x" src="images/category-template/desktop/col2-bg-fullwidth4.jpg" />
                   <div class="table">
                     <div class="vertical-wrap">
                       <img src="images/sprite/icn-play.png" class="video-play" />
@@ -333,10 +334,9 @@
                       <a href="#case-study">case study</a>
                     </div>
                     <a href="#">
-                    <div class="halfheight-bg hidden-xs example2"></div>
+                    <div class="halfheight-bg example2"></div>
                     <div class="col2-content half">
                       <h3>11 The best drive time data for sales forecasting</h3>
-                      <div class="halfheight-bg visible-xs example2"></div>
                       <p><i>Peugeot Citroen</i> improves the accuracy of drive time estimates around the catchment areas for dealerships.</p>
                     </div></a>
                   </div>
@@ -449,64 +449,87 @@
           </div><!--/.row-->
         </div><!--.container-fluid-->
       </footer>
-      <div class="menu-overlay animated">
-        <div class="fixed-top">
-          <div class="container-fluid">
-            <div class="row">
-              <div class="logo col-sm-4 col-xs-10">
-                <a href="#">
-                  <img src="images/pitneybowes-logo.png" alt="pitney bowes logo"/>
-                </a>
-              </div>
-              <div class="col-xs-2 col-sm-8">
-                <a href="#" class="close close-menu pull-right"></a>
+        <div class="menu-overlay animated">
+          <div class="fixed-top">
+            <div class="container-fluid">
+              <div class="row">
+                <div class="logo col-sm-4 col-xs-10">
+                  <a href="index.html">
+                    <img src="images/pitneybowes-logo.png" alt="pitney bowes logo"/>
+                  </a>
+                </div>
+                <div class="col-xs-2 col-sm-8">
+                  <a href="#" class="close close-menu pull-right"></a>
+                </div>
               </div>
             </div>
-          </div>
-        </div><!--/.fixed-top-->
-        <div class="table">
-          <div class="vertical-wrap">
+          </div><!--/.fixed-top-->
+          <div class="table">
+            <div class="vertical-wrap">
+              <div class="container-fluid">
+                <div class="row secondary-nav visible-xs">
+                  <div class="col-xs-6"><a href="#">My Account</a></div>
+                  <div class="col-xs-6"><a href="#">Shop</a></div>
+                </div>
+                <div class="col-xs-12 visible-xs">
+                  <div class="divider"></div>
+                </div>
+                <div class="row">
+                  <div class="col-xs-12">
+                    <ul class="cat-links">
+                      <li class="visible-xs"><a href="#">About Us</a></li>
+                      <li><a href="#">Customer Information Management</a></li>
+                      <li><a href="#">Location Intelligence</a></li>
+                      <li><a href="#">Customer Engagement</a></li>
+                      <li><a href="#">Shipping and Mailing</a></li>
+                      <li><a href="#">Global eCommerce</a></li>
+                      <li class="last"><a href="#">Brand Story FPO</a></li>
+                    </ul>
+                  </div>
+                </div>
+                <div class="col-xs-12">
+                  <div class="divider"></div>
+                </div>
+                <div class="row secondary-nav">
+                  <div class="col-xs-12 col-sm-6 desktop-menu-footer">
+                    <div class="col-xs-6 col-sm-4"><a href="#">Support</a></div>
+                    <div class="col-xs-6 col-sm-4"><a href="#">Industries</a></div>
+                    <div class="col-xs-12 col-sm-4 hidden-xs"><a href="#">United States</a></div>
+                  </div>
+                </div>
+                <div class="col-xs-12 visible-xs">
+                  <div class="divider"></div>
+                </div>
+                <div class="row secondary-nav visible-xs">
+                  <div class="col-xs-12 col-sm-4"><a href="#">United States</a></div>
+                </div>
+              </div><!--/.container-fluid-->
+            </div><!--/.vertical-wrap-->
+          </div><!--/.table-->
+        </div><!--/.menu-overlay-->
+
+        <div class="search-overlay">
+          <div class="fixed-top">
             <div class="container-fluid">
-              <div class="row secondary-nav visible-xs">
-                <div class="col-xs-6"><a href="#">My Account</a></div>
-                <div class="col-xs-6"><a href="#">Shop</a></div>
-              </div>
-              <div class="col-xs-12 visible-xs">
-                <div class="divider"></div>
+              <div class="row">
+                <div class="logo col-sm-4 col-xs-10">
+                  <a href="#">
+                    <img src="images/pitneybowes-logo.png" alt="pitney bowes logo" class=""/>
+                  </a>
+                </div>
+                <div class="col-xs-2 col-sm-8">
+                  <a href="#" class="close close-search pull-right"></a>
+                </div>
               </div>
               <div class="row">
-                <div class="col-xs-12">
-                  <ul class="cat-links">
-                    <li class="visible-xs"><a href="#">About Us</a></li>
-                    <li><a href="#">Customer Information Management</a></li>
-                    <li><a href="#">Location Intelligence</a></li>
-                    <li><a href="#">Customer Engagement</a></li>
-                    <li><a href="#">Shipping and Mailing</a></li>
-                    <li><a href="#">Global eCommerce</a></li>
-                    <li class="last"><a href="#">Brand Story FPO</a></li>
-                  </ul>
-                </div>
+               <div class="col-xs-12">
+                 <input type="text" value="Search" class="mobile-search col-xs-12" />
+                 <a href="#" class="search-clear">clear</a>
               </div>
-              <div class="col-xs-12">
-                <div class="divider"></div>
               </div>
-              <div class="row secondary-nav">
-                <div class="col-xs-12 col-sm-6 desktop-menu-footer">
-                  <div class="col-xs-6 col-sm-4"><a href="#">Support</a></div>
-                  <div class="col-xs-6 col-sm-4"><a href="#">Industries</a></div>
-                  <div class="col-xs-12 col-sm-4 hidden-xs"><a href="#">U.S. English</a></div>
-                </div>
-              </div>
-              <div class="col-xs-12 visible-xs">
-                <div class="divider"></div>
-              </div>
-              <div class="row secondary-nav visible-xs">
-                <div class="col-xs-12 col-sm-4"><a href="#">U.S. English</a></div>
-              </div>
-            </div><!--/.container-fluid-->
-          </div><!--/.vertical-wrap-->
-        </div><!--/.table-->
-      </div><!--/.menu-overlay-->
+            </div>
+          </div><!--/.fixed-top-->
+        </div><!--/.search-overlay-->
 
 
         <!-- build:js scripts/vendor-category.js -->
