--- a/app/brand-story.html
+++ b/app/brand-story.html
@@ -46,8 +46,9 @@
             <nav class="col-xs-6">
               <ul>
                 <li><a href="#" class="icn-menu"></a><li>
-                <li><a href="#" class="icn-search hidden-xs"></a></li>
-                <li><a href="#" class="icn-cart"></a></li>
+                <li><a href="#" class="icn-search"></a></li>
+                <li><a href="#" class="text-link hidden-xs">Shop</a></li>
+                <li><a href="#" class="text-link hidden-xs">My Account</a></li>
               </ul>
             </nav>
           </div><!--/.row-fluid-->
@@ -101,18 +102,17 @@
       <footer>
 
       </footer>
-      <div class="menu-overlay">
+      <div class="menu-overlay animated">
         <div class="fixed-top">
           <div class="container-fluid">
             <div class="row">
               <div class="logo col-sm-4 col-xs-10">
-                <a href="#">
-                  <img src="images/pitneybowes-logo.png" alt="pitney bowes logo" class="hidden-xs"/>
+                <a href="index.html">
+                  <img src="images/pitneybowes-logo.png" alt="pitney bowes logo"/>
                 </a>
-                <input type="text" value="Search" class="visible-xs mobile-search" />
               </div>
               <div class="col-xs-2 col-sm-8">
-                <a href="#" class="close"></a>
+                <a href="#" class="close close-menu pull-right"></a>
               </div>
             </div>
           </div>
@@ -120,12 +120,12 @@
         <div class="table">
           <div class="vertical-wrap">
             <div class="container-fluid">
-              <div class="row secondary-nav">
-                <div class="col-xs-6 visible-xs"><a href="#">My Account</a></div>
-                <div class="col-xs-6 col-sm-4 col-sm-offset-4 us-link"><a href="#">U.S. English</a></div>
-                <div class="col-xs-12 visible-xs">
-                  <div class="divider"></div>
-                </div>
+              <div class="row secondary-nav visible-xs">
+                <div class="col-xs-6"><a href="#">My Account</a></div>
+                <div class="col-xs-6"><a href="#">Shop</a></div>
+              </div>
+              <div class="col-xs-12 visible-xs">
+                <div class="divider"></div>
               </div>
               <div class="row">
                 <div class="col-xs-12">
@@ -139,21 +139,50 @@
                     <li class="last"><a href="#">Brand Story FPO</a></li>
                   </ul>
                 </div>
-                <div class="col-xs-12">
-                  <div class="divider"></div>
+              </div>
+              <div class="col-xs-12">
+                <div class="divider"></div>
+              </div>
+              <div class="row secondary-nav">
+                <div class="col-xs-12 col-sm-6 desktop-menu-footer">
+                  <div class="col-xs-6 col-sm-4"><a href="#">Support</a></div>
+                  <div class="col-xs-6 col-sm-4"><a href="#">Industries</a></div>
+                  <div class="col-xs-12 col-sm-4 hidden-xs"><a href="#">United States</a></div>
                 </div>
               </div>
-              <ul class="bottom-links row">
-                <li><a href="#">Support</a></li>
-                <li><a href="#">Industries</a></li>
-                <li><a href="#">Ink and Supplies</a></li>
-                <li class="last"><a href="#">Small Business</a></li>
-              </ul>
-
+              <div class="col-xs-12 visible-xs">
+                <div class="divider"></div>
+              </div>
+              <div class="row secondary-nav visible-xs">
+                <div class="col-xs-12 col-sm-4"><a href="#">United States</a></div>
+              </div>
             </div><!--/.container-fluid-->
           </div><!--/.vertical-wrap-->
         </div><!--/.table-->
       </div><!--/.menu-overlay-->
+
+      <div class="search-overlay">
+        <div class="fixed-top">
+          <div class="container-fluid">
+            <div class="row">
+              <div class="logo col-sm-4 col-xs-10">
+                <a href="#">
+                  <img src="images/pitneybowes-logo.png" alt="pitney bowes logo" class=""/>
+                </a>
+              </div>
+              <div class="col-xs-2 col-sm-8">
+                <a href="#" class="close close-search pull-right"></a>
+              </div>
+            </div>
+            <div class="row">
+             <div class="col-xs-12">
+               <input type="text" value="Search" class="mobile-search col-xs-12" />
+               <a href="#" class="search-clear">clear</a>
+            </div>
+            </div>
+          </div>
+        </div><!--/.fixed-top-->
+      </div><!--/.search-overlay-->
 
         <!-- build:js scripts/vendor-brandstory.js -->
         <script src="scripts/vendors/jquery/jquery-1.11.1.min.js"></script>
@@ -162,6 +191,7 @@
         <script src="scripts/vendors/jquery/jquery.event.swipe.js"></script>
         <script src="scripts/vendors/snappish/jquery.snappish.js"></script>
         <script src="scripts/vendors/headroom.js"></script>
+        <script src='scripts/vendors/greensock/TweenMax.min.js'></script>
         <!-- endbuild -->
 
 
