--- a/app/index.html
+++ b/app/index.html
@@ -66,7 +66,7 @@
                         <a href="#" class="category-1">Customer Information Management</a>
                       </div><!--/.col-sm-2.col-xs-12-->
                       <div class="cat col-sm-2">
-                        <a href="#" class="category-2" data-cat="location-intelligence">Location Intelligence</a>
+                        <a href="#" class="category-2" data-cat="category">Location Intelligence</a>
                       </div><!--/.col-sm-2.col-xs-12-->
                       <div class="cat col-sm-2">
                         <a href="#" class="category-3">Customer Engagement</a>
@@ -94,7 +94,7 @@
                 <div class="container-fluid">
                   <div class="row">
                     <div class="col-sm-8 col-sm-offset-2 col-xs-12 headline">
-                      <h2 class="animated fadeIn hidden-xs">We power <span id="power-percentage" class="percent animatedValue">0</span> of the Fortune 500.</h2>
+                      <h2 class="animated fadeIn hidden-xs">We power <span id="power-percentage" class="percent animatedValue">90%</span> of the Fortune 500.</h2>
                       <h2 class="visible-xs col-xs-12">Customer Information Management</h2>
                       <p class="animated fadeIn">Find new marketing opportunities through data optimization.</p>
                     </div>
@@ -127,7 +127,7 @@
                 <div class="container-fluid">
                   <div class="row">
                     <div class="col-sm-8 col-sm-offset-2 col-xs-12 headline">
-                      <h2 class="animated fadeIn hidden-xs">We print, sort and send <span id="send-value" class="animatedValue">0</span> million pieces of mail every day.</h2>
+                      <h2 class="animated fadeIn hidden-xs">We print, sort and send <span id="send-value" class="animatedValue">38</span> million pieces of mail every day.</h2>
                       <h2 class="visible-xs col-xs-12">Shipping and Mailing</h2>
                       <p class="animated fadeIn">Print. Mail. Ship. Increase productivity while lowering costs.</p>
                     </div>
@@ -246,6 +246,7 @@
         <!-- build:js({app,.tmp}) scripts/main.js -->
         <script src="scripts/pb.main.js"></script>
         <script src="scripts/pb.menu.js"></script>
+        <script src="scripts/pb.model.js"></script>
         <script src="scripts/pb.header.js"></script>
         <script src="scripts/pb.home.js"></script>
         <script src="scripts/pb.animatedvalues.js"></script>
