--- a/app/category.html
+++ b/app/category.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <title>PB - Category Template</title>
         <meta name="description" content="">
-        <meta name="viewport" content="width=device-width,minimal-ui">
+        <meta name="viewport" content="width=device-width,minimal-ui,initial-scale=1">
         <meta property="og:title" content=""/>
         <meta property="og:url" content=""/>
         <meta property="og:site_name" content="" />
@@ -285,7 +285,7 @@
                 </div></a><!--/.col-xs-12.col-sm-->
 
                 <a href="#"><div class="col-sm-6 bg col-xs-12 vert mobil-video-image-example">
-                  <img class="video-bg-img visible-x" src="images/category-template/desktop/col2-bg-fullwidth4.jpg" />
+                  <img class="video-bg-img visible-xs" src="images/category-template/desktop/col2-bg-fullwidth4.jpg" />
                   <div class="table">
                     <div class="vertical-wrap">
                       <img src="images/sprite/icn-play.png" class="video-play" />
@@ -542,6 +542,7 @@
 
         <!-- build:js({app,.tmp}) scripts/main-category.js -->
         <script src="scripts/pb.main.js"></script>
+        <script src="scripts/pb.model.js"></script>
         <script src="scripts/pb.menu.js"></script>
         <script src="scripts/pb.header.js"></script>
         <script src="scripts/pb.category.js"></script>
