category page tweaks

--- a/app/category.html
+++ b/app/category.html
@@ -72,9 +72,6 @@
                 <h2 class="col-xs-6 tab active"><a href="#">Explore Solutions</a></h2>
                 <h2 class="col-xs-6 tab"><a href="#">Find Products</a></h2>
             </div><!--/.row-->
-            <div class="row">
-              <p class="col-xs-12 results">Showing 2 case studies and 2 other items results</p>
-            </div><!--/.row-->
           </div><!--/.container-fluid-->
           <div class="tab-pane-content" id="explore-ideas">
 
@@ -85,18 +82,17 @@
                   <a href="#case-study">case study</a>
                   <a href="#retail" class="last">retail</a>
                 </div>
-                <div class="col-xs-12 cat-techlinks hidden-xs">
-                  <p>Technology Used: <a href="#">MapInfo Professional</a> <a href="#">MapInfo Drivetime</a> <a href="#">. . .</a></p>
-                </div><!--/.cat-techlinks-->
                 <a href="#"><div class="col-sm-6 col-xs-12 vert left">
                   <div class="table">
                     <div class="vertical-wrap">
                       <h3 class="big">1 The best drive time data for sales forecasting</h3>
-                      <p><i>Peugeot Citroen</i> improves the accuracy of drive time estimates around the catchment areas for dealerships.</p>
+                      <p class="hidden-xs"><i>Peugeot Citroen</i> improves the accuracy of drive time estimates around the catchment areas for dealerships.</p>
                     </div><!--/.vertical-wrap-->
                   </div><!--/.table-->
                 </div></a><!--/.col-xs-12.col-sm-->
-
+                <div class="col-xs-12 cat-techlinks">
+                  <p>Technology Used: <a href="#">MapInfo Professional</a> <a href="#">MapInfo Drivetime</a> <a href="#">. . .</a></p>
+                </div><!--/.cat-techlinks-->
                 <a href="#"><div class="col-sm-6 bg col-xs-12 vert">
                   <div class="table">
                     <div class="vertical-wrap">
@@ -121,19 +117,19 @@
                   <a href="#case-study">case study</a>
                   <a href="#finance" class="last">finance</a>
                 </div>
-                <div class="col-xs-12 cat-techlinks hidden-xs">
-                  <p class="center">Technology Used: <a href="#">Doc1<sup>&reg;</sup> document creation</a> <a href="#">e-Messaging Solution</a> <a href="#">Document Dialog</a></p>
-                </div><!--/.cat-techlinks-->
                 <a href="#"><div class="table">
                   <div class="vertical-wrap">
-                    <div class="col-sm-8 col-xs-12 col-sm-offset-2">
-                      <h3 class="center"><i>2 90% of all documents are now using electronic signature. Speeding up processing of requests as well as cost savings</i></h3>
+                    <div class="col-sm-8 col-xs-11">
+                      <h3 class=""><i>2 90% of all documents are now using electronic signature. Speeding up processing of requests as well as cost savings</i></h3>
                     </div><!--/.col-xs-12.col-sm-8-->
-                    <div class="col-sm-4 col-xs-12 col-sm-offset-4">
-                      <p class="center"><i>Bank J. Van Breda</i> gets digital messaging, goes paperless and implements electronic signatures</p>
+                    <div class="col-sm-8 col-xs-11">
+                      <p class=" hidden-xs"><i>Bank J. Van Breda</i> gets digital messaging, goes paperless and implements electronic signatures</p>
                     </div>
                   </div><!--/.vertical-wrap-->
                 </div></a><!--/.table-->
+                <div class="col-xs-12 cat-techlinks">
+                  <p class="">Technology Used: <a href="#">Doc1<sup>&reg;</sup> document creation</a> <a href="#">e-Messaging Solution</a> <a href="#">Document Dialog</a></p>
+                </div><!--/.cat-techlinks-->
               </div><!--/.module-->
             </div><!--/.row-->
           </div><!--/.container-fluid-->
@@ -142,17 +138,18 @@
             <div class="row">
               <div class="module col2 left halfheight">
                 <div class="col-xs-12">
-                  <div class="type-cat border white pos">
+                  <div class="col-xs-12 type-cat border white pos">
                     <a href="#">article</a>
                     <a href="#" class="last">finance</a>
                   </div>
                   <a href="#">
                     <div class="halfheight-bg example1 hidden-xs"></div>
-                  <div class="col2-content half">
-                    <h3>3 Using knowledge graphs to unlock consumer data</h3>
+                    <div class="col2-content half">
+                      <h3>3 Using knowledge graphs to unlock consumer data</h3>
+                      <p>How knowledge graphs can help businesses better mine their data...</p>
+                    </div>
                     <div class="halfheight-bg visible-xs example1"></div>
-                    <p>How knowledge graphs can help businesses better mine their data...</p>
-                  </div></a>
+                  </a>
                 </div>
               </div><!--/.module.col2-->
               <div class="module col2 right">
@@ -167,7 +164,7 @@
                     <div class="col2-content">
                       <h3 class="big">4 Why Relationships are the Next Big Thing in Big Data</h3>
                       <p class="small"><i>by Navin Sharma | August 14, 2014</i></p>
-                      <p>Thanks to digitization and Big Data, unorganized and impossible-to-search-through manila folders and filing...</p>
+                      <p class="hidden-xs">Thanks to digitization and Big Data, unorganized and impossible-to-search-through manila folders and filing...</p>
                     </div>
                   </div><!--/.vertical-wrap-->
                 </div></a><!--/.table-->
@@ -182,18 +179,17 @@
                   <a href="#case-study">case study</a>
                   <a href="#retail" class="last">retail</a>
                 </div>
-                <div class="col-xs-12 cat-techlinks hidden-xs">
-                  <p>Technology Used: <a href="#">MapInfo Professional 12.5</a> <span class="blue-box"><a href="#">Download Free Trial</a></span> <a href="#">. . .</a></p>
-                </div><!--/.cat-techlinks-->
                 <a href="#"><div class="col-sm-6 col-xs-12 vert left">
                   <div class="table">
                     <div class="vertical-wrap">
                       <h3 class="big">5 The best drive time data for sales forecasting</h3>
-                      <p><i>Peugeot Citroen</i> improves the accuracy of drive time estimates around the catchment areas for dealerships.</p>
+                      <p class="hidden-xs"><i>Peugeot Citroen</i> improves the accuracy of drive time estimates around the catchment areas for dealerships.</p>
                     </div><!--/.vertical-wrap-->
                   </div><!--/.table-->
                 </div></a><!--/.col-xs-12.col-sm-->
-
+                <div class="col-xs-12 cat-techlinks">
+                  <p>Technology Used: <a href="#">MapInfo Professional 12.5</a> <span class="blue-box"><a href="#">Download Free Trial</a></span> <a href="#">. . .</a></p>
+                </div><!--/.cat-techlinks-->
                 <a href="#"><div class="col-sm-6 bg col-xs-12 vert">
                   <div class="table">
                     <div class="vertical-wrap">
@@ -218,17 +214,17 @@
                   <a href="#case-study">case study</a>
                   <a href="#finance" class="last">finance</a>
                 </div>
-                <div class="col-xs-12 cat-techlinks hidden-xs">
-                  <p class="center">Technology Used: <a href="#">Doc1<sup>&reg;</sup> document creation</a> <a href="#">e-Messaging Solution</a> <a href="#">Document Dialog</a></p>
-                </div><!--/.cat-techlinks-->
                 <a href="#"><div class="table">
                   <div class="vertical-wrap">
-                    <img src="images/sprite/icn-play.png" class="video-play" />
-                    <div class="col-sm-4 col-xs-12 col-sm-offset-4">
-                      <p class="center"><i>8 Bank J. Van Breda</i> gets digital messaging, goes paperless and implements electronic signatures</p>
+                    <img src="images/sprite/icn-play-circle.png" class="video-play" />
+                    <div class="col-sm-8 col-xs-11">
+                      <p class="hidden-xs"><i>8 Bank J. Van Breda</i> gets digital messaging, goes paperless and implements electronic signatures</p>
                     </div>
                   </div><!--/.vertical-wrap-->
                 </div></a><!--/.table-->
+                <div class="col-xs-12 cat-techlinks">
+                  <p class="">Technology Used: <a href="#">Doc1<sup>&reg;</sup> document creation</a> <a href="#">e-Messaging Solution</a> <a href="#">Document Dialog</a></p>
+                </div><!--/.cat-techlinks-->
               </div><!--/.module-->
             </div><!--/.row-->
           </div><!--/.container-fluid-->
@@ -240,22 +236,21 @@
                   <a href="#case-study">case study</a>
                   <a href="#retail" class="last">retail</a>
                 </div>
-                <div class="col-xs-12 cat-techlinks hidden-xs">
-                  <p>Technology Used: <a href="#">MapInfo Professional</a> <a href="#">MapInfo Drivetime</a> <a href="#">. . .</a></p>
-                </div><!--/.cat-techlinks-->
                 <a href="#"><div class="col-sm-6 col-xs-12 vert left">
                   <div class="table">
                     <div class="vertical-wrap">
                       <h3 class="big">7 The best drive time data for sales forecasting</h3>
-                      <p><i>Peugeot Citroen</i> improves the accuracy of drive time estimates around the catchment areas for dealerships.</p>
+                      <p class="hidden-xs"><i>Peugeot Citroen</i> improves the accuracy of drive time estimates around the catchment areas for dealerships.</p>
                     </div><!--/.vertical-wrap-->
                   </div><!--/.table-->
                 </div></a><!--/.col-xs-12.col-sm-->
-
+                <div class="col-xs-12 cat-techlinks">
+                  <p>Technology Used: <a href="#">MapInfo Professional</a> <a href="#">MapInfo Drivetime</a> <a href="#">. . .</a></p>
+                </div><!--/.cat-techlinks-->
                 <a href="#"><div class="col-sm-6 bg col-xs-12 vert">
                   <div class="table">
                     <div class="vertical-wrap">
-                      <img src="images/sprite/icn-play.png" class="video-play" />
+                      <img src="images/sprite/icn-play-circle.png" class="video-play" />
                     </div><!--/.vertical-wrap-->
                   </div><!--/.table-->
                 </div></a><!--/.col-xs-12.col-sm-6-->
@@ -265,6 +260,7 @@
 
           <!-- duplicate of above module with img tag insted of bg for mobile -->
 
+          <!--
           <div class="container-fluid">
             <div class="row">
               <div class="module col1-halfbg example2">
@@ -272,35 +268,34 @@
                   <a href="#case-study">case study</a>
                   <a href="#retail" class="last">retail</a>
                 </div>
-                <div class="col-xs-12 cat-techlinks hidden-xs">
-                  <p>Technology Used: <a href="#">MapInfo Professional</a> <a href="#">MapInfo Drivetime</a> <a href="#">. . .</a></p>
-                </div><!--/.cat-techlinks-->
                 <a href="#"><div class="col-sm-6 col-xs-12 vert left">
                   <div class="table">
                     <div class="vertical-wrap">
                       <h3 class="big">7.2 The best drive time data for sales forecasting</h3>
-                      <p><i>Peugeot Citroen</i> improves the accuracy of drive time estimates around the catchment areas for dealerships.</p>
-                    </div><!--/.vertical-wrap-->
-                  </div><!--/.table-->
-                </div></a><!--/.col-xs-12.col-sm-->
-
+                      <p class="hidden-xs"><i>Peugeot Citroen</i> improves the accuracy of drive time estimates around the catchment areas for dealerships.</p>
+                    </div><!--/.vertical-wrap
+                  </div><!--/.table
+                </div></a><!--/.col-xs-12.col-sm
+                <div class="col-xs-12 cat-techlinks">
+                  <p>Technology Used: <a href="#">MapInfo Professional</a> <a href="#">MapInfo Drivetime</a> <a href="#">. . .</a></p>
+                </div><!--/.cat-techlinks
                 <a href="#"><div class="col-sm-6 bg col-xs-12 vert mobil-video-image-example">
                   <img class="video-bg-img visible-x" src="images/category-template/desktop/col2-bg-fullwidth4.jpg" />
                   <div class="table">
                     <div class="vertical-wrap">
-                      <img src="images/sprite/icn-play.png" class="video-play" />
-                    </div><!--/.vertical-wrap-->
-                  </div><!--/.table-->
-                </div></a><!--/.col-xs-12.col-sm-6-->
-              </div><!--/.module-->
-            </div><!--/.row-->
+                      <img src="images/sprite/icn-play-circle.png" class="video-play" />
+                    </div><!--/.vertical-wrap
+                  </div><!--/.table
+                </div></a><!--/.col-xs-12.col-sm-6
+              </div><!--/.module
+            </div><!--/.row-
           </div><!--/.container-fluid-->
 
             <div class="container-fluid">
               <div class="row">
                 <div class="module col2 left bgexample1 darkbg">
                   <div class="col-xs-12">
-                    <div class="type-cat border pos">
+                    <div class="col-xs-12 type-cat border pos">
                       <a href="#">case study</a>
                       <a href="#" class="last">finance</a>
                     </div>
@@ -308,11 +303,14 @@
                   <a href="#"><div class="table">
                     <div class="vertical-wrap">
                       <div class="col2-content">
-                        <h3 class="center"><i>9 90% of all documents are now using electronic signature. Speeding up processing of requests as well as cost savings</i></h3>
-                        <p class="center">Bank J. Van Breda gets digital messaging, goes paperless and implements electronic signatures</p>
+                        <h3 class=""><i>9 90% of all documents are now using electronic signature. Speeding up processing of requests as well as cost savings</i></h3>
+                        <p class="hidden-xs">Bank J. Van Breda gets digital messaging, goes paperless and implements electronic signatures</p>
                       </div>
                     </div><!--/.vertical-wrap-->
                   </div></a><!--/.table-->
+                  <div class="col-xs-12 cat-techlinks">
+                    <p>Technology Used: <a href="#">MapInfo Professional</a> <a href="#">MapInfo Drivetime</a> <a href="#">. . .</a></p>
+                  </div><!--/.cat-techlinks-->
                 </div><!--/.module.col2-->
                 <a href="#"><div class="module col2 right darkbg bgexample2">
                     <div class="col2-content pos bottom left">
@@ -329,7 +327,7 @@
               <div class="row">
                 <div class="module col2 left halfheight">
                   <div class="col-xs-12">
-                    <div class="type-cat border white pos">
+                    <div class="col-xs-12 type-cat border white pos">
                       <a href="#case-study">case study</a>
                     </div>
                     <a href="#">
@@ -356,7 +354,7 @@
               <div class="row">
                 <div class="module col2 left halfheight">
                   <div class="col-xs-12">
-                    <div class="type-cat border white pos">
+                    <div class="col-xs-12 type-cat border white pos">
                       <a href="#case-study">case study</a>
                     </div>
                     <a href="#">
@@ -371,21 +369,21 @@
                 </div><!--/.module.col2-->
 
                 <div class="module col2 right darkbg bgexample1">
-                    <div class="type-cat border white pos">
+                    <div class="col-xs-12 type-cat border white pos">
                       <a href="#case-study">case study</a>
                       <a href="#finance" class="last">finance</a>
                     </div>
-                    <div class="col-xs-12 cat-techlinks hidden-xs">
-                      <p class="center">Technology Used: <a href="#">MapInfo Professional</a> <a href="#">MapInfo Drivetime</a> <a href="#">. . .</a></p>
-                    </div><!--/.cat-techlinks-->
                     <a href="#"><div class="table">
                       <div class="vertical-wrap">
                         <div class="col2-content">
-                          <img src="images/sprite/icn-play.png" class="video-play" />
-                          <p class="center">Bank J. Van Breda gets digital messaging, goes paperless and implements electronic signatures</p>
+                          <img src="images/sprite/icn-play-circle.png" class="video-play" />
+                          <p class="hidden-xs">Bank J. Van Breda gets digital messaging, goes paperless and implements electronic signatures</p>
                         </div>
                       </div><!--/.vertical-wrap-->
                     </div></a><!--/.table-->
+                    <div class="col-xs-12 cat-techlinks">
+                      <p class="">Technology Used: <a href="#">MapInfo Professional</a> <a href="#">MapInfo Drivetime</a> <a href="#">. . .</a></p>
+                    </div><!--/.cat-techlinks-->
                 </div><!--/.module.col2-->
 
               </div><!--/.row-->
