--- a/app/category-all.html
+++ b/app/category-all.html
@@ -85,7 +85,7 @@
                 <a href="#"><div class="col-sm-6 col-xs-12 vert left">
                   <div class="table">
                     <div class="vertical-wrap">
-                      <h3 class="big">The best drive time data for sales forecasting</h3>
+                      <h3 class="big">1 The best drive time data for sales forecasting</h3>
                       <p class="hidden-xs"><i>Peugeot Citroen</i> improves the accuracy of drive time estimates around the catchment areas for dealerships.</p>
                     </div><!--/.vertical-wrap-->
                   </div><!--/.table-->
@@ -120,7 +120,7 @@
                 <a href="#"><div class="table">
                   <div class="vertical-wrap">
                     <div class="col-sm-8 col-xs-11">
-                      <h3 class=""><i>90% of all documents are now using electronic signature. Speeding up processing of requests as well as cost savings</i></h3>
+                      <h3 class=""><i>2 90% of all documents are now using electronic signature. Speeding up processing of requests as well as cost savings</i></h3>
                     </div><!--/.col-xs-12.col-sm-8-->
                     <div class="col-sm-8 col-xs-11">
                       <p class=" hidden-xs"><i>Bank J. Van Breda</i> gets digital messaging, goes paperless and implements electronic signatures</p>
@@ -145,7 +145,7 @@
                   <a href="#">
                     <div class="halfheight-bg example1 hidden-xs"></div>
                     <div class="col2-content half">
-                      <h3>Using knowledge graphs to unlock consumer data</h3>
+                      <h3>3 Using knowledge graphs to unlock consumer data</h3>
                       <p>How knowledge graphs can help businesses better mine their data...</p>
                     </div>
                     <div class="halfheight-bg visible-xs example1"></div>
@@ -162,7 +162,7 @@
                 <a href="#"><div class="table">
                   <div class="vertical-wrap">
                     <div class="col2-content">
-                      <h3 class="big">Why Relationships are the Next Big Thing in Big Data</h3>
+                      <h3 class="big">4 Why Relationships are the Next Big Thing in Big Data</h3>
                       <p class="small"><i>by Navin Sharma | August 14, 2014</i></p>
                       <p class="hidden-xs">Thanks to digitization and Big Data, unorganized and impossible-to-search-through manila folders and filing...</p>
                     </div>
@@ -171,6 +171,226 @@
               </div><!--/.module.col2-->
             </div><!--/.row-->
           </div><!--/.container-fluid-->
+
+          <div class="container-fluid">
+            <div class="row">
+              <div class="module col1-halfbg example1">
+                <div class="col-xs-12 type-cat border pos">
+                  <a href="#case-study">case study</a>
+                  <a href="#retail" class="last">retail</a>
+                </div>
+                <a href="#"><div class="col-sm-6 col-xs-12 vert left">
+                  <div class="table">
+                    <div class="vertical-wrap">
+                      <h3 class="big">5 The best drive time data for sales forecasting</h3>
+                      <p class="hidden-xs"><i>Peugeot Citroen</i> improves the accuracy of drive time estimates around the catchment areas for dealerships.</p>
+                    </div><!--/.vertical-wrap-->
+                  </div><!--/.table-->
+                </div></a><!--/.col-xs-12.col-sm-->
+                <div class="col-xs-12 cat-techlinks">
+                  <p>Technology Used: <a href="#">MapInfo Professional 12.5</a> <span class="blue-box"><a href="#">Download Free Trial</a></span> <a href="#">. . .</a></p>
+                </div><!--/.cat-techlinks-->
+                <a href="#"><div class="col-sm-6 bg col-xs-12 vert">
+                  <div class="table">
+                    <div class="vertical-wrap">
+                      <blockquote>"6 We no longer have to justify our drive time calculations and the dealers have full confidence in the intelligence we supply to them."
+                        <span class="quote-cite">
+                        <strong>Andrew Bury,</strong><br>
+                        Network Planning Manager,<br>
+                        Peugeot Citroen Automobiles, UK Ltd
+                        </span>
+                      </blockquote>
+                    </div><!--/.vertical-wrap-->
+                  </div><!--/.table-->
+                </div></a><!--/.col-xs-12.col-sm-6-->
+              </div><!--/.module-->
+            </div><!--/.row-->
+          </div><!--/.container-fluid-->
+
+          <div class="container-fluid">
+            <div class="row">
+              <div class="module col1-fullbg darkbg">
+                <div class="col-xs-12 type-cat border pos">
+                  <a href="#case-study">case study</a>
+                  <a href="#finance" class="last">finance</a>
+                </div>
+                <a href="#"><div class="table">
+                  <div class="vertical-wrap">
+                    <img src="images/sprite/icn-play-circle.png" class="video-play" />
+                    <div class="col-sm-8 col-xs-11">
+                      <p class="hidden-xs"><i>8 Bank J. Van Breda</i> gets digital messaging, goes paperless and implements electronic signatures</p>
+                    </div>
+                  </div><!--/.vertical-wrap-->
+                </div></a><!--/.table-->
+                <div class="col-xs-12 cat-techlinks">
+                  <p class="">Technology Used: <a href="#">Doc1<sup>&reg;</sup> document creation</a> <a href="#">e-Messaging Solution</a> <a href="#">Document Dialog</a></p>
+                </div><!--/.cat-techlinks-->
+              </div><!--/.module-->
+            </div><!--/.row-->
+          </div><!--/.container-fluid-->
+
+          <div class="container-fluid">
+            <div class="row">
+              <div class="module col1-halfbg example2">
+                <div class="col-xs-12 type-cat border pos">
+                  <a href="#case-study">case study</a>
+                  <a href="#retail" class="last">retail</a>
+                </div>
+                <a href="#"><div class="col-sm-6 col-xs-12 vert left">
+                  <div class="table">
+                    <div class="vertical-wrap">
+                      <h3 class="big">7 The best drive time data for sales forecasting</h3>
+                      <p class="hidden-xs"><i>Peugeot Citroen</i> improves the accuracy of drive time estimates around the catchment areas for dealerships.</p>
+                    </div><!--/.vertical-wrap-->
+                  </div><!--/.table-->
+                </div></a><!--/.col-xs-12.col-sm-->
+                <div class="col-xs-12 cat-techlinks">
+                  <p>Technology Used: <a href="#">MapInfo Professional</a> <a href="#">MapInfo Drivetime</a> <a href="#">. . .</a></p>
+                </div><!--/.cat-techlinks-->
+                <a href="#"><div class="col-sm-6 bg col-xs-12 vert">
+                  <div class="table">
+                    <div class="vertical-wrap">
+                      <img src="images/sprite/icn-play-circle.png" class="video-play" />
+                    </div><!--/.vertical-wrap-->
+                  </div><!--/.table-->
+                </div></a><!--/.col-xs-12.col-sm-6-->
+              </div><!--/.module-->
+            </div><!--/.row-->
+          </div><!--/.container-fluid-->
+
+          <!-- duplicate of above module with img tag insted of bg for mobile -->
+
+          <!--
+          <div class="container-fluid">
+            <div class="row">
+              <div class="module col1-halfbg example2">
+                <div class="col-xs-12 type-cat border pos">
+                  <a href="#case-study">case study</a>
+                  <a href="#retail" class="last">retail</a>
+                </div>
+                <a href="#"><div class="col-sm-6 col-xs-12 vert left">
+                  <div class="table">
+                    <div class="vertical-wrap">
+                      <h3 class="big">7.2 The best drive time data for sales forecasting</h3>
+                      <p class="hidden-xs"><i>Peugeot Citroen</i> improves the accuracy of drive time estimates around the catchment areas for dealerships.</p>
+                    </div><!--/.vertical-wrap
+                  </div><!--/.table
+                </div></a><!--/.col-xs-12.col-sm
+                <div class="col-xs-12 cat-techlinks">
+                  <p>Technology Used: <a href="#">MapInfo Professional</a> <a href="#">MapInfo Drivetime</a> <a href="#">. . .</a></p>
+                </div><!--/.cat-techlinks
+                <a href="#"><div class="col-sm-6 bg col-xs-12 vert mobil-video-image-example">
+                  <img class="video-bg-img visible-xs" src="images/category-template/desktop/col2-bg-fullwidth4.jpg" />
+                  <div class="table">
+                    <div class="vertical-wrap">
+                      <img src="images/sprite/icn-play-circle.png" class="video-play" />
+                    </div><!--/.vertical-wrap
+                  </div><!--/.table
+                </div></a><!--/.col-xs-12.col-sm-6
+              </div><!--/.module
+            </div><!--/.row-
+          </div><!--/.container-fluid-->
+
+            <div class="container-fluid">
+              <div class="row">
+                <div class="module col2 left bgexample1 darkbg">
+                  <div class="col-xs-12">
+                    <div class="col-xs-12 type-cat border pos">
+                      <a href="#">case study</a>
+                      <a href="#" class="last">finance</a>
+                    </div>
+                  </div>
+                  <a href="#"><div class="table">
+                    <div class="vertical-wrap">
+                      <div class="col2-content">
+                        <h3 class=""><i>9 90% of all documents are now using electronic signature. Speeding up processing of requests as well as cost savings</i></h3>
+                        <p class="hidden-xs">Bank J. Van Breda gets digital messaging, goes paperless and implements electronic signatures</p>
+                      </div>
+                    </div><!--/.vertical-wrap-->
+                  </div></a><!--/.table-->
+                  <div class="col-xs-12 cat-techlinks">
+                    <p>Technology Used: <a href="#">MapInfo Professional</a> <a href="#">MapInfo Drivetime</a> <a href="#">. . .</a></p>
+                  </div><!--/.cat-techlinks-->
+                </div><!--/.module.col2-->
+                <a href="#"><div class="module col2 right darkbg bgexample2">
+                    <div class="col2-content pos bottom left">
+                      <h3><i>10 MapInfo Professional 12.5</i></h3>
+                      <p class="small">The power to visualize and analyze geographical information</p>
+                      <p class="uppercase"><span class="icn-dl"></span>download the free trial now</p>
+                    </div>
+                </div></a><!--/.module.col2-->
+              </div><!--/.row-->
+            </div><!--/.container-fluid-->
+
+
+            <div class="container-fluid">
+              <div class="row">
+                <div class="module col2 left halfheight">
+                  <div class="col-xs-12">
+                    <div class="col-xs-12 type-cat border white pos">
+                      <a href="#case-study">case study</a>
+                    </div>
+                    <a href="#">
+                    <div class="halfheight-bg example2"></div>
+                    <div class="col2-content half">
+                      <h3>11 The best drive time data for sales forecasting</h3>
+                      <p><i>Peugeot Citroen</i> improves the accuracy of drive time estimates around the catchment areas for dealerships.</p>
+                    </div></a>
+                  </div>
+                </div><!--/.module.col2-->
+                <a href="#"><div class="module col2 right darkbg bgexample3">
+                    <div class="col2-content pos bottom left">
+                      <h3><i>MapInfo Professional 12.5</i></h3>
+                      <p class="small">The power to visualize and analyze geographical information</p>
+                      <p class="uppercase"><span class="icn-dl"></span>download the free trial now</p>
+                    </div>
+                </div></a><!--/.module.col2-->
+              </div><!--/.row-->
+            </div><!--/.container-fluid-->
+
+
+
+            <div class="container-fluid">
+              <div class="row">
+                <div class="module col2 left halfheight">
+                  <div class="col-xs-12">
+                    <div class="col-xs-12 type-cat border white pos">
+                      <a href="#case-study">case study</a>
+                    </div>
+                    <a href="#">
+                    <div class="halfheight-bg example3">
+                      <img src="images/sprite/icn-play-sm.png" class="video-play" />
+                    </div>
+                    <div class="col2-content half">
+                      <h3>12 The best drive time data for sales forecasting</h3>
+                      <p><i>Peugeot Citroen</i> improves the accuracy of drive time estimates around the catchment areas for dealerships.</p>
+                    </div></a>
+                  </div>
+                </div><!--/.module.col2-->
+
+                <div class="module col2 right darkbg bgexample1">
+                    <div class="col-xs-12 type-cat border white pos">
+                      <a href="#case-study">case study</a>
+                      <a href="#finance" class="last">finance</a>
+                    </div>
+                    <a href="#"><div class="table">
+                      <div class="vertical-wrap">
+                        <div class="col2-content">
+                          <img src="images/sprite/icn-play-circle.png" class="video-play" />
+                          <p class="hidden-xs">Bank J. Van Breda gets digital messaging, goes paperless and implements electronic signatures</p>
+                        </div>
+                      </div><!--/.vertical-wrap-->
+                    </div></a><!--/.table-->
+                    <div class="col-xs-12 cat-techlinks">
+                      <p class="">Technology Used: <a href="#">MapInfo Professional</a> <a href="#">MapInfo Drivetime</a> <a href="#">. . .</a></p>
+                    </div><!--/.cat-techlinks-->
+                </div><!--/.module.col2-->
+
+              </div><!--/.row-->
+            </div><!--/.container-fluid-->
+
+
+
           </div><!--.tab-pane-content#explore-ideas-->
         </div><!--/.category-content-->
       </div><!--/.main-content-->
