--- a/app/index.html
+++ b/app/index.html
@@ -215,7 +215,7 @@
           <div class="container-fluid">
             <div class="row">
               <div class="logo col-sm-4 col-xs-10">
-                <a href="#">
+                <a href="index.html">
                   <img src="images/pitneybowes-logo.png" alt="pitney bowes logo" class=""/>
                 </a>
               </div>
