show first and last child for category tech links

--- a/app/category.html
+++ b/app/category.html
@@ -128,7 +128,7 @@
                   </div><!--/.vertical-wrap-->
                 </div></a><!--/.table-->
                 <div class="col-xs-12 cat-techlinks">
-                  <p class="">Technology Used: <a href="#">Doc1<sup>&reg;</sup> document creation</a> <a href="#">e-Messaging Solution</a> <a href="#">Document Dialog</a></p>
+                  <p class="">Technology Used: <a href="#">Doc1<sup>&reg;</sup> document creation</a> <a href="#">e-Messaging Solution</a> <a href="#">Document Dialog</a><a href="#">. . .</a></p>
                 </div><!--/.cat-techlinks-->
               </div><!--/.module-->
             </div><!--/.row-->
