updated copy on category page

--- a/app/category-all.html
+++ b/app/category-all.html
@@ -59,8 +59,8 @@
           <div class="container-fluid hero">
             <div class="row">
               <div class="headline col-sm-8 col-sm-offset-2 col-xs-12">
-                <h1>Location Intelligence Headline</h1>
-                <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse viverra faucibus nisi a adipiscing.</h2>
+                <h1>Location Intelligence</h1>
+                <h2>Turn information into insights by connecting geography with data</h2>
               </div>
             </div><!--/.row-->
           </div><!--/.hero-->
