--- a/app/category.html
+++ b/app/category.html
@@ -59,8 +59,8 @@
           <div class="container-fluid hero">
             <div class="row">
               <div class="headline col-sm-8 col-sm-offset-2 col-xs-12">
-                <h1>Location Intelligence Headline</h1>
-                <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse viverra faucibus nisi a adipiscing.</h2>
+                <h1>Location Intelligence</h1>
+                <h2>Turn information into insights by connecting geography with data</h2>
               </div>
             </div><!--/.row-->
           </div><!--/.hero-->
@@ -85,7 +85,10 @@
                 <a href="#"><div class="col-sm-6 col-xs-12 vert left">
                   <div class="table">
                     <div class="vertical-wrap">
-                      <h3 class="big">The best drive time data for sales forecasting</h3>
+                      <h3 class="big">
+                        <span class="hidden-xs">The best drive time data for sales forecasting</span>
+                        <span class="visible-xs">The best drive time data for sales forecasting</span>
+                      </h3>
                       <p class="hidden-xs"><i>Peugeot Citroen</i> improves the accuracy of drive time estimates around the catchment areas for dealerships.</p>
                     </div><!--/.vertical-wrap-->
                   </div><!--/.table-->
@@ -96,7 +99,9 @@
                 <a href="#"><div class="col-sm-6 bg col-xs-12 vert">
                   <div class="table">
                     <div class="vertical-wrap">
-                      <blockquote>"We no longer have to justify our drive time calculations and the dealers have full confidence in the intelligence we supply to them."
+                      <blockquote>
+                        <span class="hidden-xs">"We no longer have to justify our drive time calculations and the dealers have full confidence in the intelligence we supply to them."</span>
+                        <span class="visible-xs">"We no longer have to justify our drive time calculations"</span>
                         <span class="quote-cite">
                         <strong>Andrew Bury,</strong><br>
                         Network Planning Manager,<br>
