--- a/app/category.html
+++ b/app/category.html
@@ -69,7 +69,7 @@
         <div class="category-content">
           <div class="container-fluid">
             <div class="row tabs">
-                <h2 class="col-xs-6 tab active"><a href="#">Explore Solutions</a></h2>
+                <h2 class="col-xs-6 tab active"><a href="#">Ideas &amp; Insights</a></h2>
                 <h2 class="col-xs-6 tab"><a href="#">Find Products</a></h2>
             </div><!--/.row-->
           </div><!--/.container-fluid-->
