--- a/app/category.html
+++ b/app/category.html
@@ -235,12 +235,13 @@
   <div class="fixed-top">
     <div class="container-fluid">
       <div class="row">
-        <div class="logo col-sm-4 col-xs-10">
+        <div class="logo col-sm-4 col-xs-6">
           <a href="index.html">
-            <img src="images/pitneybowes-logo.png" alt="pitney bowes logo"/>
+            <img src="images/pitneybowes-logo.png" alt="pitney bowes logo" class="hidden-xs"/>
+            <img src="images/sprite-mobile/pitneybowes-logo2x.png" alt="pitney bowes logo" class="visible-xs logo-mobile"/>
           </a>
         </div>
-        <div class="col-xs-2 col-sm-8">
+        <div class="col-xs-2 col-sm-8 pull-right">
           <a href="#" class="close close-menu pull-right"></a>
         </div>
       </div>
