--- a/app/index.html
+++ b/app/index.html
@@ -39,7 +39,7 @@
         <div class="container-fluid">
           <div class="row">
             <div class="logo col-xs-6">
-              <a href="#">
+              <a href="index.html">
                 <img src="images/pitneybowes-logo.png" alt="pitney bowes logo" class="hidden-xs"/>
                 <img src="images/sprite-mobile/pitneybowes-logo2x.png" alt="pitney bowes logo" class="visible-xs logo-mobile"/>
               </a>
