removed brand story link, brand story page is not part of sprint 2 demo

--- a/app/index.html
+++ b/app/index.html
@@ -85,7 +85,7 @@
                   <div class="row">
                     <div class="col-sm-8 col-sm-offset-2 col-xs-12 headline">
                       <h1 class="animated fadeInUp">Brand Story FPO</h1>
-                      <p class="animated fadeIn larger"><a href="brand-story.html">lorem ipsum sit amet<span class="icn icn-caret"></span></a></p>
+                      <p class="animated fadeIn larger"><a href="#">lorem ipsum sit amet<span class="icn icn-caret"></span></a></p>
                     </div>
                   </div>
                 </div>
