created separate controllers for index.html and category.html

--- a/app/brand-story.html
+++ b/app/brand-story.html
@@ -196,6 +196,7 @@
 
 
         <!-- build:js({app,.tmp}) scripts/main-brandstory.js -->
+        <script src="scripts/pb.namespace.js"></script>
         <script src="scripts/pb.main.js"></script>
         <script src="scripts/pb.brandstory.js"></script>
         <script src="scripts/pb.menu.js"></script>
