--- a/app/category.html
+++ b/app/category.html
@@ -325,7 +325,8 @@
 
 
         <!-- build:js({app,.tmp}) scripts/main-category.js -->
-        <script src="scripts/pb.main.js"></script>
+        <script src="scripts/pb.namespace.js"></script>
+        <script src="scripts/pb.main-category.js"></script>
         <script src="scripts/pb.model.js"></script>
         <script src="scripts/pb.menu.js"></script>
         <script src="scripts/pb.header.js"></script>
