--- a/app/index.html
+++ b/app/index.html
@@ -293,6 +293,7 @@
 
 
         <!-- build:js({app,.tmp}) scripts/main.js -->
+        <script src="scripts/pb.namespace.js"></script>
         <script src="scripts/pb.main.js"></script>
         <script src="scripts/pb.menu.js"></script>
         <script src="scripts/pb.model.js"></script>
