--- a/app/long-form-content.html
+++ b/app/long-form-content.html
@@ -237,6 +237,7 @@
       <!-- endbuild -->
 
       <!-- build:js({app,.tmp}) scripts/main.js -->
+      <script src="scripts/pb.namespace.js"></script>
       <script src="scripts/pb.main.js"></script>
       <script src="scripts/pb.menu.js"></script>
       <script src="scripts/pb.model.js"></script>
